--- a/res/layout/activity_todo.xml
+++ b/res/layout/activity_todo.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" 
+
     tools:context="com.forCodePath.todoapp.TodoActivity$PlaceholderFragment" >
         
     <ListView
@@ -14,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/btnAdd"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
+        android:layout_below="@+id/ibtnSort" >
 
     </ListView>
 
@@ -38,5 +39,15 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:text="@string/add_button_label" />
+
+    <ImageButton
+        android:id="@+id/ibtnSort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onSortItems"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/sort_list_desc"
+        android:src="@android:drawable/stat_notify_sync" />
 
 </RelativeLayout>
